fix: bg-transparent z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -27,6 +27,8 @@ body {
   color: #fff;
   text-align: center;
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+  position: relative;
+  z-index: 2;
 }
 .name {
   font-size: 4em;
@@ -45,6 +47,7 @@ body {
   height: 280px;
   background-color: rgba(255, 255, 255, 0.12);
   position: absolute;
+  z-index: 1;
 }
 .left {
   bottom: -140px;
